Hacer movimiento del tanque

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@ Name       : PlainLeaf
 Description: A two-column, fixed-width design with dark color scheme.
 Version    : 1.0
 Released   : 20130902
-
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -37,23 +36,23 @@ Released   : 20130902
 		</ul>
 	</div>
 </div>
-<div id="banner"><img src="images/cotxe.webp"></div>
+<div id="banner"><img src="images//TANQUE.png"></div>
 <div id="page" class="container">
-	<div class="boxA">
+	<div  class="boxA">
 		<h2>Etiam posuere augue</h2>
 		<div class="box">
-			<a href="#" class="image image-full"><img src="images/pic01.jpg" alt="" /></a>
-			<span>Maecenas luctus lectus</span>
+			<a href="#" class="image image-full"><img src="images/pic01.jpg" alt="" class="rotating-image"  /></a>
+			<span> Maecenas luctus lectus</span>
 		</div>
 		<p>Vivamus fermentum augue. Praesent lacus urna rutrum. Nulla enim eros varius. Duis enim nulla luctus eu, dapibus lacinia.</p>
 		<a href="#" class="button">Etiam posuere</a>
 	</div>
 
-	<div class="boxB">
+	<div class="boxB">	
 		<h2>Donec dictum metus</h2>
 		<div class="box">
-			<a href="#" class="image image-full"><img src="images/pic02.jpg" alt="" /></a>
-			<span>Lorem ipsum dolor sit amet</span>
+			<a href="#" class="image image-full"><img src="images/pic02.jpg" alt=""  class="rotating-image" /></a>
+			<span  >Lorem ipsum dolor sit amet</span>
 		</div>
 		<p>Vivamus fermentum augue. Praesent lacus urna rutrum. Nulla enim eros varius. Duis enim nulla luctus eu, dapibus lacinia.</p>
 		<a href="#" class="button">Etiam posuere</a>
@@ -62,7 +61,7 @@ Released   : 20130902
 	<div class="boxC">
 		<h2>Fusce ultrices fringilla</h2>
 		<div class="box">
-			<a href="#" class="image image-full"><img src="images/pic03.jpg" alt="" /></a>
+			<a href="#" class="image image-full"><img src="images/pic03.jpg" alt="" class="rotating-image"	/></a>
 			<span>Pellentesque quis lectus</span>
 		</div>
 		<p>Vivamus fermentum augue. Praesent lacus urna rutrum. Nulla enim eros varius. Duis enim nulla luctus eu, dapibus lacinia.</p>
