enlace a los botones

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Released   : 20130902
 		<h2>Etiam posuere augue</h2>
 		<div class="box">
 			<a href="#" class="image image-full"><img src="images/pic01.jpg" alt="" class="rotating-image"  /></a>
-			<span> Maecenas luctus lectus</span>
+			<span> <a href="https://www.facebook.com/">Maecenas luctus lectus</a> </span>
 		</div>
 		<p>Vivamus fermentum augue. Praesent lacus urna rutrum. Nulla enim eros varius. Duis enim nulla luctus eu, dapibus lacinia.</p>
 		<a href="#" class="button">Etiam posuere</a>
@@ -52,7 +52,7 @@ Released   : 20130902
 		<h2>Donec dictum metus</h2>
 		<div class="box">
 			<a href="#" class="image image-full"><img src="images/pic02.jpg" alt=""  class="rotating-image" /></a>
-			<span  >Lorem ipsum dolor  sit amet</span>
+			<span>  <a href="https://www.facebook.com/">Lorem ipsum dolor  sit amet</a></span>
 		</div>
 		<p>Vivamus fermentum augue. Praesent lacus urna rutrum. Nulla enim eros varius. Duis enim nulla luctus eu, dapibus lacinia.</p>
 		<a href="#" class="button">Etiam posuere</a>
@@ -62,7 +62,7 @@ Released   : 20130902
 		<h2>Fusce ultrices fringilla</h2>
 		<div class="box">
 			<a href="#" class="image image-full"><img src="images/pic03.jpg" alt="" class="rotating-image"	/></a>
-			<span>Pellentesque quis lectus</span>
+			<span><a href="https://www.facebook.com/">Pellentesque quis lectus</a></span>
 		</div>
 		<p>Vivamus fermentum augue. Praesent lacus urna rutrum. Nulla enim eros varius. Duis enim nulla luctus eu, dapibus lacinia.</p>
 		<a href="#" class="button">Etiam posuere</a>
