cambio de color de los botones cuando pasen por encima

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@ Released   : 20130902
 		<h2>Donec dictum metus</h2>
 		<div class="box">
 			<a href="#" class="image image-full"><img src="images/pic02.jpg" alt=""  class="rotating-image" /></a>
-			<span>  <a href="https://www.facebook.com/">Lorem ipsum dolor  sit amet</a></span>
+			<span>  <a href="https://www.facebook.com/">Lorem ipsum dolor sit amet</a></span>
 		</div>
 		<p>Vivamus fermentum augue. Praesent lacus urna rutrum. Nulla enim eros varius. Duis enim nulla luctus eu, dapibus lacinia.</p>
-		<a href="#" class="button">Etiam posuere</a>
+		<a href="#" class="button">Etiam psuere</a>
 	</div>
 
 	<div class="boxC">
